--- a/UE4_Web_Test.html
+++ b/UE4_Web_Test.html
@@ -12,6 +12,8 @@
 
 <html lang="en">
 <head>
+<meta http-equiv="Content-Security-Policy" content="default-src 'self' *; script-src 'self' 'unsafe-inline' 'unsafe-eval' *; style-src 'self' 'unsafe-inline' *; img-src 'self' data: *">
+
 	<title>UE4_Web_Test</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
